@@ -14,7 +14,7 @@ return {
 		floater = true,
 		footprintx = 5,
 		footprintz = 5,
-		health = 5400,
+		health = 5600,
 		idleautoheal = 5,
 		idletime = 1800,
 		maxacc = 0.028,
